# JobMatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml  secrets.toml.template
scripts/: __init__.py  download_kaggle_data.py  extract_requirements.py  filter_tech_jobs.py  generate_embeddings.py  index_embeddings.py  ingest_data.py  setup_data.py
src/: __init__.py  aggregator.py  analytics.py  database.py  embedding.py  extractor.py  models.py  ranking.py  recommendation.py  vector_store.py
src/api/: exceptions.py  main.py
src/api/routes/: candidates.py  feedback.py  jobs.py  recommendations.py  weights.py
streamlit_app/: app.py
